--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <div class="header">
         <div class="navbar">
             <div class="logo-box">
+                <div id="home"></div>
 
                 <img class="logo" src="https://saylaniwelfareusa.com/static/media/logo_saylaniwelfareusa.22bf709605809177256c.png" alt="">
             </div>
             <div class="navlink-container">
                 <ul>
-                    <li><a class="underline" href="#about">Home</a></li>
+                    <li><a class="underline" href="#home">Home</a></li>
                     <li><a class="underline" href="#about">About</a></li>
-                    <li><a class="underline" href="#about">Products</a></li>
-                    <li><a class="underline" href="#about">Contact</a></li>
+                    <li><a class="underline" href="#services">Services</a></li>
+                    <li><a class="underline" href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="toggle-icon">
@@ -60,12 +61,12 @@
 
             <!-- about section -->
 
-
+<div id="about"></div>
             <div class="about-section">
                 <p class="about-heading">
-                    <About Us/p>
+                    About Us</p>
                         <div class="about-desc-container">
-                            <p class="about-description">
+                            <p class="about-text">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, voluptas voluptatibus
                                 dolore
                                 quia nobis nihil aperiam saepe tempora exercitationem ad earum a delectus modi est
@@ -92,12 +93,13 @@
                                 aspernatur nisi sed.
                             </p>
                         </div>
+                        <div id="services"></div>
             </div>
 
             <!-- services section -->
 
             <div class="services-section">
-                <p class="services-section">Services</p>
+                <p class="services-heading">Services</p>
                 <div class="services-container">
 
                     <!-- card no.1 start-->
@@ -106,7 +108,7 @@
                             <img src="./SMIT Wallpaper.jpg" alt="">
                         </div>
                         <div class="card-description-wrapper">
-                            <p class="card-title">Food</p>
+                            <p class="card-title underline">Food</p>
                             <p class="card-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Molestias,
                                 est!</p>
@@ -121,7 +123,7 @@
                             <img src="./SMIT Wallpaper.jpg" alt="">
                         </div>
                         <div class="card-description-wrapper">
-                            <p class="card-title">Health</p>
+                            <p class="card-title underline ">Health</p>
                             <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
                                 asperiores!</p>
                         </div>
@@ -129,19 +131,20 @@
                     </div>
                     <!-- card no.2 end  -->
 
-                    <!-- card no.3 start-->
+                     <!-- card no.3 start-->
                     <div class="services-card-container">
                         <div class="services-img-wrapper">
                             <img src="./SMIT Wallpaper.jpg" alt="healt services">
                         </div>
                         <div class="card-description-wrapper">
-                            <p class="card-title">Education</p>
+                            <p class="card-title underline">Education</p>
                             <p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
                                 saepe.
                             </p>
                         </div>
-
+                        
                     </div>
+                    <div id="contact"></div>
                     <!-- card no.3 end  -->
 
 
@@ -169,10 +172,10 @@
         <!-- Social Media Links or Other Links -->
         <div class="medialinks-wrapper">
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                <li><a class="underline" href="#">Facebook</a></li>
+                <li><a class="underline" href="#">Twitter</a></li>
+                <li><a class="underline" href="https://github.com/Hassank0550">Github</a></li>
+                <li><a class="underline" href="">LinkedIn</a></li>
             </ul>
         </div>
 
