--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
         <!-- Social Media Links or Other Links -->
         <div class="medialinks-wrapper">
             <ul>
-                <li><a class="underline" href="#">Facebook</a></li>
+                <li><a class="underline" href="https://www.facebook.com/">Facebook</a></li>
                 <li><a class="underline" href="#">Twitter</a></li>
                 <li><a class="underline" href="https://github.com/Hassank0550">Github</a></li>
-                <li><a class="underline" href="">LinkedIn</a></li>
+                <li><a class="underline" href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit">LinkedIn</a></li>
             </ul>
         </div>
 
